# agent-start

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSING.md  README.ja.md  README.md  SECURITY.md  config.example.json  install.sh  next.config.mjs  package-lock.json  package.json  server.mjs  tailwind.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  rust.yml  web.yml
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/api/config/: route.ts
app/api/git/diff/: route.ts
app/api/git/status/: route.ts
app/api/preferences/: route.ts
app/api/projects/: route.ts
app/api/sessions/: route.ts
app/api/sessions/[name]/: route.ts
app/api/sessions/[name]/output/: route.ts
app/api/sessions/[name]/windows/: route.ts
app/api/sessions/[name]/windows/[index]/: route.ts
components/: DeleteConfirmSheet.tsx  FilesView.tsx  LaunchConfirmSheet.tsx  MainPane.tsx  ProjectCard.tsx  RightPane.tsx  SessionCard.tsx  SessionPreviewModal.tsx  SettingsDialog.tsx  SettingsSheet.tsx  Sheet.tsx  Sidebar.tsx  Terminal.tsx  ThemeProvider.tsx  Toast.tsx  Toggle.tsx  icons.tsx  tab-types.ts
components/ui/: Badge.tsx  Button.tsx  Input.tsx  Spinner.tsx  index.ts
docs/: ROADMAP.md  chat-ui-plan.md  licensing-overview.ja.md
docs/screenshots/: README.md
enterprise/: LICENSE  README.md
front/: .gitignore  index.html  oxfmt.toml  oxlintrc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
front/src/: main.tsx  router.tsx
front/src/components/: AddProjectModal.tsx  BranchSwitcher.tsx  ChatView.tsx  CommitGraphView.tsx  DeleteConfirmSheet.tsx  DeleteProjectConfirm.tsx  DiffTabView.tsx  DiffView.tsx  EditorTab.tsx  FileExplorer.tsx  FilesView.tsx  GuiView.tsx  IssuesSheet.tsx  LaunchConfirmSheet.tsx  MainPane.tsx  RepoTreeView.tsx  RightPane.tsx  SettingsDialog.tsx  SettingsPage.tsx  Sheet.tsx  Sidebar.tsx  Terminal.tsx  ThemeProvider.tsx  Toast.tsx  Toggle.tsx  UpdateBanner.tsx  icons.tsx  tab-types.ts
front/src/components/chat/: ChatComposer.tsx  ChatMarkdown.tsx  ChatMessage.tsx
front/src/components/main/: PendingSessionView.tsx  SessionHeader.tsx  SidebarToggle.tsx  TabBar.tsx  TabContent.tsx  WelcomeBanner.tsx  skeletons.tsx
front/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  ErrorState.tsx  IconButton.tsx  Input.tsx  Kbd.tsx  Menu.tsx  SegmentedControl.tsx  Skeleton.tsx  Spinner.tsx  Tabs.tsx  Tooltip.tsx  index.ts
front/src/lib/: chat-types.ts  format.ts  useChatSocket.ts  useMediaQuery.ts  viewportHeight.ts
front/src/routes/: __root.tsx  index.tsx  settings.tsx
front/src/styles/: globals.css
lib/: claude-trust.ts  config.ts  git.ts  preferences.ts  projects.ts  slug.ts  tmux.ts  worktree.ts
server/: terminal.mjs
server-rs/: Cargo.toml
server-rs/.cargo/: audit.toml
server-rs/crates/agent-start-api/: Cargo.toml
server-rs/crates/agent-start-api/src/: lib.rs
server-rs/crates/chat-manager/: Cargo.toml
server-rs/crates/chat-manager/src/: error.rs  lib.rs  manager.rs  session.rs
server-rs/crates/chat-manager/tests/: smoke.rs
server-rs/crates/code-server-manager/: Cargo.toml
server-rs/crates/code-server-manager/src/: lib.rs
server-rs/crates/config-loader/: Cargo.toml
server-rs/crates/config-loader/src/: config.rs  error.rs  io.rs  lib.rs  migrate.rs  paths.rs  preferences.rs  safety.rs
server-rs/crates/git-ops/: Cargo.toml
server-rs/crates/git-ops/src/: branch.rs  commit.rs  diff.rs  exec.rs  github.rs  lib.rs  log.rs  remote.rs  status.rs  tree.rs  worktree.rs
server-rs/crates/novnc-manager/: Cargo.toml
server-rs/crates/novnc-manager/src/: lib.rs
server-rs/crates/pty-manager/: Cargo.toml
server-rs/crates/pty-manager/src/: error.rs  lib.rs  manager.rs  ring.rs  session.rs
server-rs/crates/state/: Cargo.toml
server-rs/crates/state/migrations/: 0001_init.sql  0002_pty_snapshot.sql  0003_code_server.sql  0004_chat.sql  0005_session_title.sql
server-rs/crates/state/src/: lib.rs
server-rs/crates/workspace-manager/: Cargo.toml
server-rs/crates/workspace-manager/src/: lib.rs
