[workspace]
resolver = "2"
members = [
    "bin/agent-start-host",
    "bin/agent-start",
    "crates/agent-start-api",
    "crates/workspace-manager",
    "crates/pty-manager",
    "crates/code-server-manager",
    "crates/git-ops",
    "crates/config-loader",
    "crates/state",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/imanect-labs/agent-start"

[workspace.dependencies]
agent-start-api = { path = "crates/agent-start-api" }
config-loader  = { path = "crates/config-loader" }
git-ops        = { path = "crates/git-ops" }
pty-manager    = { path = "crates/pty-manager" }
code-server-manager = { path = "crates/code-server-manager" }
state          = { path = "crates/state" }
workspace-manager = { path = "crates/workspace-manager" }

anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
futures-util = "0.3"
bytes = "1"
parking_lot = "0.12"
once_cell = "1"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.9"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
