[package]
name = "git-ops"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config-loader = { workspace = true }

[dev-dependencies]
tempfile = "3"
