[package]
name = "novnc-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
config-loader = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
