[package]
name = "pty-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
portable-pty = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
state = { workspace = true }
config-loader = { workspace = true }
